fix : can't scroll seizure dialog on iphone8

--- a/front/src/app/dialogs/seizure-dialog/seizure-dialog.component.scss
+++ b/front/src/app/dialogs/seizure-dialog/seizure-dialog.component.scss
@@ -1,6 +1,6 @@
 .seizure {
-  //width: 800px;
-  //height: 600px;
+	overflow: auto;
+	max-height: 100vh;
 }
 
 .player-board {
